# Operating_System

./: README.md  makefile  readme.txt  server  server.c  shell  shell.c  shell.h
ex1/: ReadMe.txt  makefile  readme.txt  server.c  shell.c
ex4/: CMakeLists.txt  allocation.c  allocation.h  client.c  client.cpp  funcs.c  funcs.cpp  funcs.h  makefile  multi_threaded_server.c  multi_threaded_server.cpp  readme.txt  stack  stack.c  stack.cpp  stack.h  stack.hpp  tests.c
ex4/stack/: CMakeLists.txt  stack.cpp  stack.hpp
ex5/: CMakeLists.txt  client.c  client.cpp  funcs.c  funcs.cpp  funcs.h  funcs.hpp  makefile  multi_threaded_server.c  multi_threaded_server.cpp  readme.txt  tests.c
ex5/funcs/: CMakeLists.txt
ex5/stack/: CMakeLists.txt
ex6/: CMakeLists.txt  Queue.c  Queue.cpp  Queue.h  Queue.hpp  active_object.cpp  active_object.hpp  client.cpp  guard.cpp  main.cpp  main.hpp  main1.cpp  main1.hpp  makefile  pipeline.cpp  pipline.hpp  pollclient.cpp  pollserver.cpp  reactor.cpp  reactor.hpp  readme.txt  server.cpp  singleton.cpp  test.cpp
ex7/: CMakeLists.txt  Mylibc.c  Mylibc.h  filesystem.txt  main.c  makefile  myfs.c  myfs.h  mystdio.c  mystdio.h  output.txt  readme.txt  test.c
